--- a/UTSA_MAT1224_spring2023.html
+++ b/UTSA_MAT1224_spring2023.html
@@ -636,18 +636,14 @@ a) To consolidate the techniques of integration seen so far.
 b) Structure the techniques of integration seen so far in an unified way.
 </p>
 <h3 id="lec14">Lecture 14 (Mar 8)<br/>
-<em>Separation of Variables</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Separation_of_Variables" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/4-3-separable-equations" role="button">Sec. 4.3</a></h3>
+<em>Crahs Course on Differential Applications</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/4-introduction" role="button">Ch. 4</a><a class="btn btn-extrabook" href="https://archive.org/embed/AmelkinDifferentialEquationsInApplicationsScienceForEveryoneMir1990" role="button">Amelkin's Book</a></h3>
 <p>
 Differential equations play a central role in science, as they allow us to describe precisely how the different variables that we measure change in terms of the other variables that we measure. In general, understanding how a variable of interest—such as position, heat, concentration of a certain molecule—means understanding the underlying differential equation that describes how it varies. Now, solving differential equations
 \[\dot{x}=f(x,t),\]
 where $\dot{x}$ denotes the derivative of $x$ with respect to $t$, is hard in general—note that a more propper formal way to write the differential equation is $\dot{x}(t)=f(x(t),t)$ since we are trying to find $x$ as a function $t\mapsto x(t)$ of $t$. Even when we are just interested in the evolution of a single variable $t\mapsto x(t)\in\mathbb{R}$ and not a vector function $t\mapsto x(t)\in\mathbb{R}^n$, finding the solution of these differential equations is hard.
 </p>
 <p>
-Now, sometimes, the equations we want to solve are of the form
-\[\dot{x}=g(x)h(t).\]
-When this is the case, we can <em>separate the variables</em>, i.e., write the equation as
-\[\frac{\mathrm{d}x}{g(x)}=h(t)\mathrm{d}x,\]
-and integrate to obtain invariants of our differential equation and so solve the differential equation. The focus of this lecture is on this case.
+In this introductory lecture, we will explore some of the uses and philosophies underlying the use of differential equations in science. This is a side lecture before the Spring Break to motivate the material seen until now in the course.
 </p>
 <p>
 <em>MathInContext</em>: Where do differential equations appear? Although the differential equations in physics are widely taught in many curricula, differential equations are not limited to physics. We can find them in all the sciences: in marketing, describing the efficacy of publicity; in economy, describing how price varies in terms of the offer and the demans; in chemistry, describing how the concentrations of the different molecules change during a chemical rreaction; in biology, describing how populations grow and decrease in an ecosystem; and in epideomology, describing how a dissease is transmitted across a population.
@@ -657,40 +653,30 @@ Additional materials to learn more:
 </p>
 <p>
 <b>Learning Objectives:</b>
-a) Recognize separable differential equations.
-b) Use separation of variables to solve a differential equation.
+a) Recognize the meaning of a differential equation.
+b) Be aware of some of the applications and uses of differential equations.
 c) Develop and analyze elementary mathematical models.
 </p>
 <hr>
 <h3 style="font-variant: small-caps;text-align:center;">Spring Break</h3>
 <hr>
 
-<h3 id="lec15">Lecture 15 (Mar 20)<br/>
-<em>First-Order Linear Differential Equations</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=First-Order_Linear_Equations" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/4-5-first-order-linear-equations" role="button">Sec. 4.5</a></h3>
+<h3 id="lec1516">Lecture 15-16 (Mar 20 &amp; Mar 22)<br/>
+<em>Sequences I &amp; II</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Sequences" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/5-1-sequences" role="button">Sec. 5.1</a></h3>
 <p>
 
 </p>
 <p>
 <b>Learning Objectives:</b>
-a) Find an integrating factor and use it to solve a first-order linear differential equation.
-b) Solve applied problems involving first-order linear differential equations.
+  a) Find a formula for the general term of a sequence.
+  b) Find a recursive definition of a sequence.
+  c) Determine the convergence or divergence of a given sequence.
+  d) Find the limit of a convergent sequence.
+  e) Determine whether a sequence is bounded and/or monotone.
+  f) Apply the Monotone Convergence Theorem.
 </p>
-<h3 id="lec16">Lecture 16 (Mar 22)<br/>
-<em>Sequences</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Sequences" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/5-1-sequences" role="button">Sec. 5.1</a></h3>
-<p>
-
-</p>
-<p>
-<b>Learning Objectives:</b>
-a) Find a formula for the general term of a sequence.
-b) Find a recursive definition of a sequence.
-c) Determine the convergence or divergence of a given sequence.
-d) Find the limit of a convergent sequence.
-e) Determine whether a sequence is bounded and/or monotone.
-f) Apply the Monotone Convergence Theorem.
-</p>
-<h3 id="lec17">Lecture 17 (Mar 27)<br/>
-<em>Infinite Series</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Infinite_Series" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/5-2-infinite-series" role="button">Sec. 5.2</a></h3>
+<h3 id="lec1617">Lecture 16-17 (Mar 22 &amp; 27)<br/>
+<em>Infinite Series I &amp; II</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Infinite_Series" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/5-2-infinite-series" role="button">Sec. 5.2</a></h3>
 <p>
 
 </p>
