--- a/research_es.html
+++ b/research_es.html
@@ -184,9 +184,10 @@
 	 <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="https://www.mathematik.uni-osnabrueck.de/forschung/ag_angewandte_algebra_und_Fechananalyse/kozhasov_khazhgali.html">Khazhgali Kozhasov</a>)</div>
 	</div>
 
-	<br/><div class="row"><div class="col-md-12">
-	<h3>Art&iacute;culos cient&iacute;ficos de revista</h3>
-	</div></div>
+</div>
+<hr>
+<div id="journalpapers">
+  <h2 class="display-4">Art&iacute;culos cient&iacute;ficos de revista</h2>
 
 	<br/><div class="cv">
 	<div class="year"><h4>2023</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<br/>&emsp;I: Univariate Polynomials and Hypersurfaces<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423" role="button">arXiv:2006.04423</a></h4></div>
