--- a/research.html
+++ b/research.html
@@ -183,9 +183,10 @@
 	 <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://www.mathematik.uni-osnabrueck.de/forschung/ag_angewandte_algebra_und_datenanalyse/kozhasov_khazhgali.html">Khazhgali Kozhasov</a>)</div>
 	</div>
 
-	<br/><div class="row"><div class="col-md-12">
-	<h3>Journal papers</h3>
-	</div></div>
+</div>
+<hr>
+<div id="journalpapers">
+  <h2 class="display-4">Journal papers</h2>
 
 	<br/><div class="cv">
 	<div class="year"><h4>2023</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<br/>&emsp;I: Univariate Polynomials and Hypersurfaces<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423" role="button">arXiv:2006.04423</a></h4></div>
