--- a/UTSA_MAT1224_spring2023.html
+++ b/UTSA_MAT1224_spring2023.html
@@ -926,7 +926,7 @@ In both cases, we have that if $\rho< 1$, then the series $\sum_n a_n$ is absolu
 </p>
 <p>
 In general, the root test is stronger than the ratio test. If both $\lim_{n\to]infty}\frac{|a_{n+1}|}{|a_n|}$ and $\lim_{n\to]infty}|a_n|^{\frac{1}{n}}$ exist, then they are equal. However, for some series, such as
-\[\sum_{n=1}^\infty 3^{-n+\ln n},\]
+\[\sum_{n=1}^\infty 3^{-n+\ln^2 n},\]
 the ratio test gives absolute convergence, while the ratio test is inconclusive.
 </p>
 <p>
