--- a/cv.html
+++ b/cv.html
@@ -385,7 +385,7 @@
        <div class="year">
 
        </div><div class="title">
-       <h4>&emsp;AMS Special Session on <em>Data Science at the Crossroads of Analysis, Geometry, and Topology</em><br/>(a Mathematics Research Communities session)</h4></div>
+       <h4>&emsp;AMS Special Session on <br/><em>Data Science at the Crossroads of Analysis, Geometry, and Topology</em><br/>(a Mathematics Research Communities session)</h4></div>
        <div class="year"></div><div class="title">
        <h4>&#160;&#160;at the <a href="#JMM2023">Joint Mathematics Meetings 2023</a></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">Co-organizer</div>
@@ -563,7 +563,12 @@
           YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
           <br/><div class="cv">
-          <div class="year"><h4>2023</h4></div><div class="title"><h4>&emsp;<a href="#rsmejovenes23">VI Congreso de Jóvenes Investigadores de la RSME</a></h4></div>
+          <div class="year"><h4>2023</h4></div><div class="title"><h4>&emsp;<a href="#BIRS2023">Workshop “Random Algebraic Geometry” (23w5070)</a></h4></div>
+            <div class="pretalktitle"></div><div class="talktitle">Condition-based Low-Degree Approximation of Real Polynomial Systems<span style="float:right;"><a href="https://www.birs.ca/events/2023/5-day-workshops/23w5070/videos/watch/202304181531-Tonelli-Cueto.html">Video</a></span></div>
+          </div>
+
+          <br/><div class="cv">
+          <div class="year"></div><div class="title"><h4>&emsp;<a href="#rsmejovenes23">VI Congreso de Jóvenes Investigadores de la RSME</a></h4></div>
             <div class="pretalktitle"></div><div class="talktitle">Condition-based Low-Degree Approximation of Real Polynomial Systems<!--<span style="float:right;"><a href="pdf/RSME2023_slides.pdf">Slides</a></span>--></div>
           </div>
 
@@ -775,6 +780,13 @@
       <br/><div class="row"><div class="col-md-12">
       <h3>Invited seminar talks</h3>
       </div></div>
+
+      <br/><div class="cv">
+      <div class="year"><h4>2023</h4></div><div class="title"><h4>&emsp;<a href="https://www.math.colostate.edu/~king/codex/">CodEx Seminar</a><span style="float:right;"><a href="pdf/23CodExTalk_slides.pdf">Slides</a><!--/<a href="">Video</a>--></span></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle">Condition Numbers and probability for Explaining Algorithms</div>
+        <div class="property">Location:</div><div class="value">Online</div>
+        <div class="property">Date:</div><div class="value">30th of May of 2023</div>
+      </div>
 
 
       <br/><div class="cv">
