--- a/cv_es.html
+++ b/cv_es.html
@@ -391,7 +391,7 @@
        <div class="year">
 
        </div><div class="title">
-       <h4>&emsp;AMS Special Session on <em>Data Science at the Crossroads of Analysis, Geometry, and Topology</em><br/>(a Mathematics Research Communities session)</h4></div>
+       <h4>&emsp;AMS Special Session on <br/><em>Data Science at the Crossroads of Analysis, Geometry, and Topology</em><br/>(a Mathematics Research Communities session)</h4></div>
        <div class="year"></div><div class="title">
        <h4 style="font-size:1.2em;">&ensp;&emsp;<em>(Sesi&oacute;n Especial AMS <em>Ciencia de Datos en la Intersecci&oacute;n del An&aacute;lisis, la Geometr&iacute;a y la Topolog&iacute;a</em>)</em></h4></div>
        <div class="year"></div><div class="title">
@@ -580,7 +580,12 @@
           YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
           <br/><div class="cv">
-          <div class="year"><h4>2023</h4></div><div class="title"><h4>&emsp;<a href="#rsmejovenes23">VI Congreso de Jóvenes Investigadores de la RSME</a></h4></div>
+          <div class="year"><h4>2023</h4></div><div class="title"><h4>&emsp;<a href="#BIRS2023">Workshop “Random Algebraic Geometry” (23w5070)</a></h4></div>
+            <div class="pretalktitle"></div><div class="talktitle">Condition-based Low-Degree Approximation of Real Polynomial Systems<span style="float:right;"><a href="https://www.birs.ca/events/2023/5-day-workshops/23w5070/videos/watch/202304181531-Tonelli-Cueto.html">V&iacute;deo</a></span></div>
+          </div>
+
+          <br/><div class="cv">
+          <div class="year"></div><div class="title"><h4>&emsp;<a href="#rsmejovenes23">VI Congreso de Jóvenes Investigadores de la RSME</a></h4></div>
             <div class="pretalktitle"></div><div class="talktitle">Condition-based Low-Degree Approximation of Real Polynomial Systems<!--<span style="float:right;"><a href="pdf/RSME2023_slides.pdf">Diapositivas</a></span>--></div>
           </div>
 
@@ -791,6 +796,13 @@
       <br/><div class="row"><div class="col-md-12">
       <h3>Charlas invitadas en seminarios</h3>
       </div></div>
+
+      <br/><div class="cv">
+      <div class="year"><h4>2023</h4></div><div class="title"><h4>&emsp;<a href="https://www.math.colostate.edu/~king/codex/">CodEx Seminar</a><span style="float:right;"><a href="pdf/23CodExTalk_slides.pdf">Diapositivas</a><!--/<a href="">V&iacute;deo</a>--></span></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle">Condition Numbers and probability for Explaining Algorithms</div>
+        <div class="property">Location:</div><div class="value">On-line</div>
+        <div class="property">Fecha:</div><div class="value">30 de mayo del 2023</div>
+      </div>
 
       <br/><div class="cv">
       <div class="year"><h4>2022</h4></div><div class="title"><h4>&emsp;<a href="https://math.sciences.ncsu.edu/event/symbolic-computation-seminar-josue-tonelli-cueto-san-antonio-state-university-computing-numerically-the-homology-of-semialgebraic-sets/">Symbolic Computation Seminar</a><span style="float:right;"><a href="pdf/NCSU22_seminar_talk.pdf">Diapositivas</a></span></h4></div>
