slides SIAM AG 23

--- a/cv_es.html
+++ b/cv_es.html
@@ -632,7 +632,7 @@
 
           <br/><div class="cv">
           <div class="year"><h4>2023</h4></div><div class="title"><h4>&emsp;<a href="#SIAMAG2023">SIAM Conference on Applied Algebraic Geometry 2023</a></h4></div>
-            <div class="pretalktitle"></div><div class="talktitle">Condition-Based Probabilistic Complexity of Symbolic Algorithms: Descartes' Solver and Beyond!<!--<span style="float:right;"><a href="">V&iacute;deo</a></span>--></div>
+            <div class="pretalktitle"></div><div class="talktitle">Condition-Based Probabilistic Complexity of Symbolic Algorithms: Descartes' Solver and Beyond!<span style="float:right;"><a href="pdf/SIAMAG23_slides.pdf">Diapositivas</a></span></div>
           </div>
 
           <br/><div class="cv">
