--- a/cv.html
+++ b/cv.html
@@ -617,7 +617,7 @@
 
           <br/><div class="cv">
           <div class="year"><h4>2023</h4></div><div class="title"><h4>&emsp;<a href="#SIAMAG2023">SIAM Conference on Applied Algebraic Geometry 2023</a></h4></div>
-            <div class="pretalktitle"></div><div class="talktitle">Condition-Based Probabilistic Complexity of Symbolic Algorithms: Descartes' Solver and Beyond!<!--<span style="float:right;"><a href="">V&iacute;deo</a></span>--></div>
+            <div class="pretalktitle"></div><div class="talktitle">Condition-Based Probabilistic Complexity of Symbolic Algorithms: Descartes' Solver and Beyond!<span style="float:right;"><a href="pdf/SIAMAG23_slides.pdf">Slides</a></span></div>
           </div>
 
           <br/><div class="cv">
@@ -627,7 +627,7 @@
 
           <br/><div class="cv">
           <div class="year"></div><div class="title"><h4>&emsp;<a href="#rsmejovenes23">VI Congreso de Jóvenes Investigadores de la RSME</a></h4></div>
-            <div class="pretalktitle"></div><div class="talktitle">Condition-based Low-Degree Approximation of Real Polynomial Systems<!--<span style="float:right;"><a href="pdf/RSME2023_slides.pdf">Slides</a></span>--></div>
+            <div class="pretalktitle"></div><div class="talktitle">Condition-based Low-Degree Approximation of Real Polynomial Systems</div>
           </div>
 
           <br/><div class="cv">
