--- a/cv_es.html
+++ b/cv_es.html
@@ -854,7 +854,7 @@
       </div></div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2023</h4></div><div class="title"><h4>&emsp;<a href="https://www.math.colostate.edu/~king/codex/">CodEx Seminar</a><span style="float:right;"><a href="pdf/23CodExTalk_slides.pdf">Diapositivas</a><!--/<a href="">V&iacute;deo</a>--></span></h4></div>
+      <div class="year"><h4>2023</h4></div><div class="title"><h4>&emsp;<a href="https://www.math.colostate.edu/~king/codex/">CodEx Seminar</a><span style="float:right;"><a href="pdf/23CodExTalk_slides.pdf">Diapositivas</a>/<a href="https://www.youtube.com/watch?v=eH4-pCg8DDU">V&iacute;deo</a></span></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">Condition Numbers and probability for Explaining Algorithms</div>
         <div class="property">Location:</div><div class="value">On-line</div>
         <div class="property">Fecha:</div><div class="value">30 de mayo del 2023</div>
