--- a/multimedia_es.html
+++ b/multimedia_es.html
@@ -466,12 +466,15 @@
   <h3>V&iacute;deos de ponencias en conferencias y otros eventos</h3>
   <p>Estos son v&iacute;deos de algunas de mis ponencias en conferencias. Los v&iacute;deos disponibles en YouTube est&aacute;n recogidos en una <a href="https://www.youtube.com/playlist?list=PL_f-VNpYlzl3t7vl6w_CL8MF_EjEex_l9"><em>lista de reproducci&oacute;n de YouTube</em></a>.</p>
   <div class="row">
-    <div class="col-md-3"></div>
+    <!--<div class="col-md-3"></div>-->
+    <div class="col-md-6" style="padding-top:1em;">
+       <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/eH4-pCg8DDU" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+       <p style="text-align:center;"><b style="color:#ee2523;">Condition Numbers and Probability for Explaining Algorithms</b><br/>CodEx Seminar, mayo de 2023</p>
+    </div>
     <div class="col-md-6" style="padding-top:1em;">
        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/kv_H87tGEEo" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
        <p style="text-align:center;"><b style="color:#ee2523;">Beyond Worst-Case Analysis for Root Isolation Algorithms</b><br/>ISSAC'22, julio de 2022</p>
     </div>
-    <div class="col-md-3"></div>
     <div class="col-md-6" style="padding-top:1em;">
        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/F1EMidO6su4" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
        <p style="text-align:center;"><b style="color:#ee2523;">Introductory Talk to the MiniSympoium<br/>on Computational Real Algebraic Geometry</b><br/>SIAM AG21, agosto de 2021</p>
