--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
 
         <h1>Josu&eacute; Tonelli&#8209;Cueto</h1>
         <h2>Mathematician</h2>
-        <h3>Postdoc at<br/><a href="https://www.utsa.edu/">The University of Texas at San Antonio</a></h3>
-        <!--<h3><em>Rufus Isaacs Postdoctoral Fellow</em><br/>at <a href="https://www.jhu.edu/">John Hopkins University</a></h3>-->
+        <h3><em>Rufus Isaacs Postdoctoral Fellow</em><br/>at <a href="https://www.jhu.edu/">John Hopkins University</a></h3>
         <!--<h4 style="color:#ee2523;font-variant: small-caps;">In the Job Market</h4>-->
 
         <div class="row" align="center" style="padding-top:3vw;font-size:2vw;"><!--3vw padding top if not searching for a job, 1vw otherwise!-->
