--- a/index_es.html
+++ b/index_es.html
@@ -114,8 +114,7 @@
 
         <h1>Josu&eacute; Tonelli Cueto</h1>
         <h2>Matem&aacute;tico</h2>
-        <h3>Postdoc en<br/><a href="https://www.utsa.edu/">The University of Texas at San Antonio</a></h3>
-        <!--<h3><em>Rufus Isaacs Postdoctoral Fellow</em><br/>en la <a href="https://www.jhu.edu/">John Hopkins University</a></h3>-->
+        <h3><em>Rufus Isaacs Postdoctoral Fellow</em><br/>en la <a href="https://www.jhu.edu/">John Hopkins University</a></h3>
         <!--<h4 style="color:#ee2523;font-variant: small-caps;">Buscando un trabajo</h4>-->
 
         <div class="row" align="center" style="padding-top:3vw;font-size:2vw;">
